@@ -6,6 +6,7 @@ History for IMDBPHP2
 v2.1.3
 -------------------
 ! some redirects have not been handled correctly (i.e. when IMDBID xxxxxxx was re-routed to yyyyyyy)
+! imdb::is_serial() and imdb::get_episode_details() were broken due to site changes
 
 v2.1.2 (19.01.2012)
 -------------------
